clang/test/BSC/Negative/InitAnalysis/init-ensure-init-if-ret-caller-indirect.cbs
// RUN: %clang_cc1 -fsyntax-only -verify %s

// =============================================================================
// Indirect pass: when an ensure_init_if_ret arg is not a direct `&x` /
// `&_Mut x` expression, the init effect cannot be verified. The
// warn_ensure_init_not_addressof diagnostic fires.
// =============================================================================

_Safe int try_init(int *_Borrow __attribute__((ensure_init_if_ret(0))) out);


// Storing the address in a local first defeats the analysis.
// (x is pre-initialised so the intermediate &_Mut borrow is itself valid.)
_Safe void test_indirect(void) {
    int x = 0;
    int *_Borrow p = &_Mut x;
    int r = try_init(p); // expected-warning {{ensure_init_if_ret effect cannot be verified when argument is not an address-of expression}}
}

// Passing a parameter pointer (not &expr) warns as well.
_Safe void test_param_pass(int *_Borrow q) {
    int r = try_init(q); // expected-warning {{ensure_init_if_ret effect cannot be verified when argument is not an address-of expression}}
}

// Delegation: passing one ensure_init_if_ret param to another is exempt.
_Safe int delegating(int *_Borrow __attribute__((ensure_init_if_ret(0))) out) {
    return try_init(out); // no warning
}
